[gd_scene load_steps=9 format=3 uid="uid://b5w5d0f6vj0w"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_f8fgr"]
[ext_resource type="Texture2D" uid="uid://c6lqj0vhtgqj" path="res://assets/pixmaps/bgTitle.png" id="2_wcvc5"]
[ext_resource type="Texture2D" uid="uid://c1vry4h2kihx" path="res://assets/pixmaps/btn_newGame.png" id="3_g7wsc"]
[ext_resource type="Texture2D" uid="uid://blg0h01h1vtm" path="res://assets/pixmaps/btn_continue.png" id="4_58h1v"]
[ext_resource type="Texture2D" uid="uid://bpgbl58qg52su" path="res://assets/pixmaps/bg1.png" id="5_q82j1"]
[ext_resource type="PackedScene" uid="uid://bixyqf2w5y5w" path="res://scenes/paddle.tscn" id="6_abcde"]
[ext_resource type="PackedScene" uid="uid://d0c8bsg7n8h7e" path="res://scenes/brick.tscn" id="7_fghij"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wall"]
size = Vector2(660, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wall2"]
size = Vector2(20, 500)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_floor"]
size = Vector2(660, 20)

[node name="Main" type="Node2D"]
script = ExtResource("1_f8fgr")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("5_q82j1")
centered = false

[node name="Paddle" parent="." instance=ExtResource("6_abcde")]
position = Vector2(320, 450)

[node name="Walls" type="StaticBody2D" parent="."]
collision_layer = 1

[node name="Top" type="CollisionShape2D" parent="Walls"]
position = Vector2(320, -10)
shape = SubResource("RectangleShape2D_wall")

[node name="Left" type="CollisionShape2D" parent="Walls"]
position = Vector2(-10, 240)
shape = SubResource("RectangleShape2D_wall2")

[node name="Right" type="CollisionShape2D" parent="Walls"]
position = Vector2(650, 240)
shape = SubResource("RectangleShape2D_wall2")

[node name="FloorSensor" type="Area2D" parent="."]
position = Vector2(320, 490)

[node name="CollisionShape" type="CollisionShape2D" parent="FloorSensor"]
shape = SubResource("RectangleShape2D_floor")

[node name="UI" type="CanvasLayer" parent="."]

[node name="StartMenu" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="UI/StartMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_wcvc5")

[node name="NewGameButton" type="TextureButton" parent="UI/StartMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -25.0
offset_right = 64.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("3_g7wsc")

[node name="ContinueButton" type="TextureButton" parent="UI/StartMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = 35.0
offset_right = 64.0
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_58h1v")

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
visible = false

[node name="ScoreLabel" type="Label" parent="UI/HUD"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 150.0
offset_bottom = 33.0
text = "Score: 0"

[node name="LivesLabel" type="Label" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -150.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 33.0
grow_horizontal = 0
text = "Lives: 5"
horizontal_alignment = 2

[node name="AmmoLabel" type="Label" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_top = 10.0
offset_right = 75.0
offset_bottom = 33.0
grow_horizontal = 2
text = "Ammo: 0"
horizontal_alignment = 1

[node name="GameOverScreen" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
visible = false

[node name="ColorRect" type="ColorRect" parent="UI/GameOverScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="Label" type="Label" parent="UI/GameOverScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
text = "Game Over
Click to continue"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameWonScreen" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
visible = false

[node name="ColorRect" type="ColorRect" parent="UI/GameWonScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="Label" type="Label" parent="UI/GameWonScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
text = "You Won!
Click to continue"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="UI/StartMenu/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="UI/StartMenu/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="body_entered" from="FloorSensor" to="." method="_on_floor_sensor_body_entered"]
